# sap-datasphere-mcp

./: .env.example  .gitignore  .npmignore  .pypirc  CHANGELOG.md  CHANGELOG_v1.0.10.md  CONTRIBUTING.md  CURRENT_WORK_SUMMARY.md  DASHBOARD_MILESTONE_SUMMARY.md  DATASPHERE_MCP_SUCCESS_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEVELOPER_GUIDE.md  Dockerfile  EXACT_WORKING_CODE.py  FEATURES_OVERVIEW.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUCCESS_SUMMARY.md  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  LINKEDIN_POST.md  MANIFEST.in  MCP_FOUNDATION_TOOLS_GENERATION_PROMPT.md  MCP_IMPROVEMENTS_PLAN.md  MCP_SERVER_README.md  MCP_SETUP_GUIDE.md  OAUTH_IMPLEMENTATION_STATUS.md  PROJECT_STATUS_OVERVIEW.md  PUBLISHING_CHECKLIST.md  README.md  README_METADATA_EXTRACTOR.md  SAP_DATASPHERE_FOUNDATION_TOOLS_SPEC.md  SETUP.md  TASK_1_COMPLETION_SUMMARY.md  TASK_2_COMPLETION_SUMMARY.md  TASK_3_COMPLETION_SUMMARY.md  TASK_4_COMPLETION_SUMMARY.md  TASK_5_COMPLETION_SUMMARY.md  TASK_6_COMPLETION_SUMMARY.md  TROUBLESHOOTING_CONNECTIVITY.md  (+109 more)
.claude/: settings.local.json
.kiro/: chat-suggestions.md
ailien-platform-k8s/: Dockerfile  README.md  docker-compose.yml  requirements.txt
auth/: __init__.py  authorization.py  datasphere_auth_connector.py  tool_validators.py
cap-test-project/: package.json
config/: __init__.py  datasphere_config.json.example  glue_config.json.example  settings.py
datasphere-control-panel/: add_explore_endpoint.py  app.py  check_logs.py  create_fixed_function.py  create_new_function.py  debug_and_fix_explore.py  deploy.py  deploy_professional.py  (+51 more)
(+191 files in other folders)
